--- a/inst/scripts/ChromosomeFigures.Rnw
+++ b/inst/scripts/ChromosomeFigures.Rnw
@@ -2,33 +2,7 @@
 stopifnot(exists("CHR"))
 stopifnot(exists("save.figs"))
 if(!exists("v")) v <- 1
-library(Beaty)
-library(lattice)
-library(grid)
-library(locuszoom)
-data(bsSet)
-data(minDistanceSet)
-data(minDistanceRanges)
-data(deletion.ranges)
-ldPath(beadstudiodir())
-featureData(minDistanceSet) <- featureData(bsSet)
-open(copyNumber(minDistanceSet))
-open(baf(bsSet))
-open(logR(bsSet))
-open(minDistanceSet$MAD)
-open(bsSet$MAD)
-data(jugessur)
 @
-
-<<annotation>>=
-idmap <- read.csv("~/projects2/Beaty/inst/extdata/gwas_to_local_id.csv", stringsAsFactors=FALSE)
-idmap <- idmap[idmap$cidr_name %in% deletion.ranges$id, ]
-index <- match(deletion.ranges$id, idmap$cidr_name)
-idmap <- idmap[index, ]
-stopifnot(identical(idmap$cidr_name, deletion.ranges$id))
-deletion.ranges$local_id <- idmap$local_id2
-@
-
 
 <<genomic.annotations>>=
 chr.name <- paste("chr", CHR, sep="")
@@ -43,6 +17,8 @@ data(rf)
 rf.chr <- rf[rf$txStart <= xlim[2] & rf$txEnd >= xlim[1] & rf$chrom==chr.name, ]
 data(cnv)
 cnv.chr <- cnv[cnv$txStart <= xlim[2] & cnv$txEnd >= xlim[1] & cnv$chrom==chr.name, ]
+flatBed <- flatten.bed(rf.chr)
+flatBed.cnv <- flatten.bed(cnv.chr)
 @
 
 <<grid.rectangleplot>>=
@@ -88,28 +64,22 @@ if(nrow(jug) > 0){
 grid.text(label=as.character(del$num.mark), vp="plotRegion",
 	  y=unit(y, "native"),
 	  x=unit(ends/1e6+0.1, "native"), gp=gpar("cex"=0.7))
-##kg$geneName[is.na(kg$geneName)] <- kg$name[is.na(kg$geneName)]
-##kg$geneName[substr(kg$geneName, 1, 2)== "uc"] <-
 upViewport(0)
-flatBed <- flatten.bed(rf.chr)
+
 mn <- min(flatBed$start)
 mx <- max(flatBed$stop)
 pushViewport(viewport(layout=layout))
 pushViewport(viewport(layout.pos.row=2, name="genes", clip="on"))
 pushViewport(plotViewport(c(0, 4, 0,2)))  ## needs to be exact same as above
 pushViewport(dataViewport(xscale=xlim/1000, yscale=c(0,1), clip="on"))
-##grid.rect()
 panel.flatbed(flat=flatBed, showIso=FALSE, cex=0.6, rows=6)
-
 upViewport(0)
-flatBed.cnv <- flatten.bed(cnv.chr)
 mn <- min(flatBed.cnv$start)
 mx <- max(flatBed.cnv$stop)
 pushViewport(viewport(layout=layout))
 pushViewport(viewport(layout.pos.row=3, name="genes", clip="on"))
 pushViewport(plotViewport(c(0, 4, 0,2)))  ## needs to be exact same as above
 pushViewport(dataViewport(xscale=xlim/1000, yscale=c(0,1), clip="on"))
-##grid.rect()
 panel.flatbed(flat=flatBed.cnv, showIso=FALSE, cex=0.6, rows=6, col="red", fill="red")
 upViewport(1)
 if(save.figs) dev.off()
@@ -143,9 +113,29 @@ for(j in seq_along(index)){
 	grid.obj <- data.frame(logR=c(logR.F(mset),
 			       logR.M(mset),
 			       logR.O(mset),
-			       mindist(mset)),
+			       -mindist(mset)),
 			       x=rep(position(mset)/1e6, 4),
 			       subject=factor(rep(1:4, each=nrow(mset)), labels=c("Father", "Mother", "Offspring", "min distance"), ordered=TRUE))
+	nn <- sum(grid.obj$logR < -2, na.rm=TRUE)
+	if(nn > 10) {
+		ii <- which(grid.obj$logR < -5)
+		grid.obj$logR[ii] <- jitter(rep(-5, length(ii)),  amount=0.5)
+	} else {
+		ii <- which(grid.obj$logR < -2)
+		if(length(ii) > 0){
+			grid.obj$logR[ii] <- jitter(rep(-2, length(ii)),  amount=0.5)
+		}
+	}
+	nn <- sum(grid.obj$logR > 1, na.rm=TRUE)
+	if(nn > 10) {
+		ii <- which(grid.obj$logR > 2)
+		grid.obj$logR[ii] <- jitter(rep(2, length(ii)),  amount=0.5)
+	} else {
+		ii <- which(grid.obj$logR > 1)
+		if(length(ii) > 0){
+			grid.obj$logR[ii] <- jitter(rep(1, length(ii)),  amount=0.5)
+		}
+	}
 	grid.obj2 <- data.frame(baf=c(baf.F(mset),
 			       baf.M(mset),
 			       baf.O(mset)),
@@ -159,7 +149,6 @@ for(j in seq_along(index)){
 	plot.baf <- xyplot(baf ~ x | subject, data=grid.obj2, pch=21, cex=0.3, layout=c(1,3), index.cond=list(3:1),
 			   xlab="",
 			   ylab="")
-
 	print(plot.logr, position=c(0, 0, 0.5, 1), more=TRUE)
 	grid.text("Log R Ratio", x=unit(0.25, "npc"), y=unit(0.97, "npc"), gp=gpar("cex"=1.1))
 	grid.text(paste("Family", sampleNames(mset)), x=unit(0.5, "npc"), y=unit(0.98, "npc"), gp=gpar("cex"=1.2))
@@ -180,6 +169,7 @@ for(j in seq_along(index)){
 	tmp <- panel.segments(x0=start(cbs.sub)/1e6, x1=end(cbs.sub)/1e6, y0=cbs.sub$seg.mean, y1=cbs.sub$seg.mean, lwd=2)#gp=gpar("lwd"=2))
 
         ranges.md <- minDistanceRanges[minDistanceRanges$chrom == CHR, ]
+	ranges.md$seg.mean <- -1*ranges.md$seg.mean
 	cbs.sub <- ranges.md[substr(ranges.md$id, 1, 5) %in% sampleNames(mset), ]
 	trellis.focus("panel", 1, 1, highlight = FALSE)
 	panel.grid(h = 10, v = 10, col = "grey", lty = 3)
@@ -221,7 +211,7 @@ for(j in seq_along(index)){
 	pushViewport(plotViewport(c(0, 3, 0,3)))  ## needs to be exact same as above
 	pushViewport(dataViewport(xscale=xlim/1e6, yscale=c(0,1), clip="on"))
 
-	bg <- "lightgrey"
+	bg <- "lightblue"
 	bg2 <- col2rgb(bg)/255
 	fill <- rgb(bg2[1, ], bg2[2,], bg2[3,], alpha=0.1)
 	for(k in seq_along(index[[j]])){
